<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mahe.firebaseauthentication.Mainfunction1">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="44dp"
        android:text="@string/a"
        android:textColor="@color/color1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="44dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/e1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/g"
        android:textColor="@color/color1"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="13dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/g"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="24dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:text="@string/h"
        android:textColor="@color/color1"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        android:layout_marginRight="36dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/h1"
        android:textColor="@color/color1"
        app:layout_constraintEnd_toEndOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7"
        android:layout_marginRight="36dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="39dp"
        android:text="@string/a1"
        android:textColor="@color/color1"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="68dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:text="@string/b1"
        android:textColor="@color/color1"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        android:layout_marginLeft="68dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="31dp"
        android:text="@string/m5"
        android:textColor="@color/color1"
        android:textSize="21sp"
        app:layout_constraintEnd_toStartOf="@+id/editText8"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="36dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/i"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        android:layout_marginLeft="36dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/rs"
        android:textColor="@color/color1"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        android:layout_marginLeft="68dp" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/i"
        app:layout_constraintStart_toStartOf="@+id/editText8"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        android:layout_marginLeft="2dp" />

</android.support.constraint.ConstraintLayout>
